Version 10.0 - Carrier Command edition. 23 August 2021

Added Sega Master System emulation
Added .sms file viewer
Added midi output and .mid support for QL and SN audio chips (Master System, SG1000, etc)
Added Automatic Snapshots to RAM + Rewind feature
Added new improved real tape loading algorithm
Added setting to disable TZX pauses
Added zsf to scr support for Next, ZX-Uno and TSConf snapshots
Added Jupiter Ace 51 KB RAM emulation
Added GUI styles: BeOS, Bloody, Grass, Ocean, Sunny, Panther, Sky
Added Fuzix ide image on the zesarux-extras package
Added ZSF snapshot support for Jupiter Ace, Z88
Added --slotcard-num setting to insert a Z88 card in a numbered slot (1, 2 or 3)
Added ZRCP command mmc-reload to reload MMC image
Added speech scripts to realtime translation from one language to another of a text adventure game
Added ZEsarUX logo on the window footer


Improved Debug CPU Window:
-Added backwards debugging, backwards run
-Mouse accions: click (toggle breakpoint, change registers), scrolling up/down by using the mouse wheel
-Improve window refresh when pressing keys on non-step mode
-Preserve step mode when assembling
-Added new key to set PC=PTR
-Added new key to go to next breakpoint type PC=dir
-Allow to define up to 100 breakpoints (same that you could define using ZRCP)
-Added cpu history menu to see registers in the past (same as you already had on ZRCP)

Improved Debugging:
-Can now browse Basic variables on ZX Spectrum, ZX81 and ZX80
-Added Window View Sensors to graph internal emulation sensors, performance, statistics, etc
-Added command line setting to load source code

Improved ZX Vision menu interface:
-Machine manufacturer list is now sorted by name (instead of some kind of mixed age and type)
-Added setting to pause cpu emulation on menu when multitask active
-Added Degraded ZX Desktop Fill Type
-Added button on footer to switch ZX Desktop