@@ -222,3 +222,8 @@ indice_debug_cpu_backwards_history 0
 
 Esto es porque reseteo indice_debug_cpu_backwards_history. Habria que gestionar mejor como se resetea dicha posicion, si solo
 al hacer un step o cuando....
+
+
+-Consola ZRCP desde menú. Cómo gestionar comandos de cpu step que bloquean el menú?
+
+-Comando ZRCP  restaurar registros de historial 
